# Audit-Trail-API

./: .gitignore  README.md  app.py  debian_setup.sh  directory_structure.txt  globals.py  requirements.txt  setup.cfg
api/: api.py  db.json  logger.py
client_app/: client.py
docs/: sqe project report(audit trails).docx
frontend/: app.js  index.html  styles.css
