[metadata]
name = audit_trail_lib
version = 0.1.0
description = A Python library for audit trail handling
long_description = file: README.md
long_description_content_type = text/markdown
author = Shehroz Kashif
author_email = sharooz57@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
